@@ -1,4 +1,6 @@
 ver 0.21.18 (not yet released)
+* protocol
+  - work around Mac OS X bug in the ISO 8601 parser
 * output
   - alsa: fix hang bug with ALSA "null" outputs
 * storage
